edits to footnotes mainly

--- a/01_agama/samyukta/01/SA1_165.md
+++ b/01_agama/samyukta/01/SA1_165.md
@@ -80,10 +80,10 @@ next: SA1_166.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 53 in the <cite>Taisho</cite> edition and no. 165 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012c04" target="_blank">T99.2.12c4-3a16</a>). This <em>sūtra</em> does not appear to have a direct parallel in the Pali <em>sutta</em>s, but it consists of common elements brought together in a particular way. First, it belongs to a genre of <em>sūtra</em>s in which the inhabitants of a brahmin village go to question the Buddha after hearing about his fame and virtue. Second, it presents a shortened form of dependent origination and cessation that proceed from grasping or craving to suffering. Third, it identifies the acceptance and delight in the aggregates as leading to rebirth. Thus, there is no unique innovation here other than using the five aggregates as a substitute for the first half of the full chain of dependent origination. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>Kosala</em>. C. 拘薩羅國 (EMC kɪu-sat-la + “country” = Pr. <em>kosala</em>), G. <em>kosala</em>, P. <em>kosala</em>, S. <em>kausala</em> or <em>kauśala</em>. This was the country bordering Magadha and Kāśī and ruled by King Pasenadi (S. Prasenajit). The capital city was Śrāvastī, where the Buddha spent the majority of his time as a teacher.</p>
-<p><em>village of Sālā</em>. C. 薩羅聚落 (EMC sat-la + “village” = Pr. <em>salagama</em>), G. <em>salagrama</em>, P. <em>sālā brāhmaṇagāma</em>. The transliteration of this village’s name was confused in this <em>sūtra</em> and in the summary verse after SĀ 1.168 (56). That is, 薩 (EMC sat) was confused with 婆 (EMC bua). 婆 was often a typo for 娑 (EMC sa). Perhaps the original text read 娑羅, which was a common way of writing Indic <em>sala</em>. This may have been corrupted to 婆羅 and later corrected to 薩羅 (which was used for this village name in other texts), but not all the occurrences were found and fixed.</p>
-<p><em>rosewood grove</em>. C. 申恕林 (EMC ʃɪĕn-ʃɪo + “forest” = Pr. <em>śiṃśa[pa]vana</em>), G. ?, P. <em>sīsapāvana</em>, S. <em>śiṃśapāvana</em>. This was the name of the Indian rosewood tree, often called the <em>śiśu</em> tree today. [<a href="#ref2">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 53 in the <cite>Taisho</cite> edition and no. 165 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012c04" target="_blank">T99.2.12c4-3a16</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0165a06" target="_blank">Y30.165a6-6a11</a>). This <em>sūtra</em> does not appear to have a direct parallel in the Pali <em>sutta</em>s, but it consists of common elements brought together in a particular way. First, it belongs to a genre of <em>sūtra</em>s in which the inhabitants of a brahmin village go to question the Buddha after hearing about his fame and virtue. Second, it presents a shortened form of dependent origination and cessation that proceed from grasping or craving to suffering. Third, it identifies the acceptance and delight in the aggregates as leading to rebirth. Thus, there is no unique innovation here other than using the five aggregates as a substitute for the first half of the full chain of dependent origination. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Kosala</em>. C. <span class="ch">拘薩羅國</span> (EMC kɪu-sat-la + “country” = Pr. <em>kosala</em>), G. <em>kosala</em>, P. <em>kosala</em>, S. <em>kausala</em> or <em>kauśala</em>. This was the country bordering Magadha and Kāśī and ruled by King Pasenadi (S. Prasenajit). The capital city was Śrāvastī, where the Buddha spent the majority of his time as a teacher.</p>
+<p><em>village of Sālā</em>. C. <span class="ch">薩羅聚落</span> (EMC sat-la + “village” = Pr. <em>salagama</em>), G. <em>salagrama</em>, P. <em>sālā brāhmaṇagāma</em>. The transliteration of this village’s name was confused in this <em>sūtra</em> and in the summary verse after SĀ 1.168 (56). That is, <span class="ch">薩</span> (EMC sat) was confused with <span class="ch">婆</span> (EMC bua). <span class="ch">婆</span> was often a typo for <span class="ch">娑</span> (EMC sa). Perhaps the original text read <span class="ch">娑羅</span>, which was a common way of writing Indic <em>sala</em>. This may have been corrupted to <span class="ch">婆羅</span> and later corrected to <span class="ch">薩羅</span> (which was used for this village name in other texts), but not all the occurrences were found and fixed.</p>
+<p><em>rosewood grove</em>. C. <span class="ch">申恕林</span> (EMC ʃɪĕn-ʃɪo + “forest” = Pr. <em>śiṃśa[pa]vana</em>), G. ?, P. <em>sīsapāvana</em>, S. <em>śiṃśapāvana</em>. This was the name of the Indian rosewood tree, often called the <em>śiśu</em> tree today. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
