--- a/01_agama/samyukta/01/SA1_166.md
+++ b/01_agama/samyukta/01/SA1_166.md
@@ -80,9 +80,9 @@ next: SA1_167.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 54 in the <cite>Taisho</cite> edition and no. 166 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0013a17" target="_blank">T99.2.13a17-b12</a>). This <em>sūtra</em> does not appear to have a direct parallel in the Pali <em>sutta</em>s. It belongs to a genre of <em>sūtra</em>s which feature encounters with brahmins and their teachings. They typically criticize brahmins and Brahminism in various ways and depict the Buddha as defeating them in debates or converting them with superior reasoning. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>*Vikataloka</em>. C. 毘迦多魯迦 (EMC. bii-kă-ta-lo-kă = <em>vikaṭaloka</em>?). There doesn’t seem to be any precedent or parallel for this name other than <em>vikaṭa</em> being the name of certain <em>yakṣa</em>s and the name of a mountain in BHS sources. But it seems a straightforward transliteration. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>originally have no seed</em>. C. 本無種. It seems most likely that 無種 translated P/S. <em>abīja</em>, which would literally mean “not a seed” or “infertile.” Perhaps here this is another word for a cause. Not being certain about the exact intent here, I’ve translated the C. literally. [<a href="#ref3">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 54 in the <cite>Taisho</cite> edition and no. 166 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0013a17" target="_blank">T99.2.13a17-b12</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0167a11" target="_blank">Y30.167a11-8a9</a>). This <em>sūtra</em> does not appear to have a direct parallel in the Pali <em>sutta</em>s. It belongs to a genre of <em>sūtra</em>s which feature encounters with brahmins and their teachings. They typically criticize brahmins and Brahminism in various ways and depict the Buddha as defeating them in debates or converting them with superior reasoning. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>*Vikataloka</em>. C. <span class="ch">毘迦多魯迦</span> (EMC. bii-kă-ta-lo-kă = <em>vikaṭaloka</em>?). There doesn’t seem to be any precedent or parallel for this name other than <em>vikaṭa</em> being the name of certain <em>yakṣa</em>s and the name of a mountain in BHS sources. But it seems a straightforward transliteration. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>originally have no seed</em>. C. <span class="ch">本無種</span>. It seems most likely that <span class="ch">無種</span> translated P/S. <em>abīja</em>, which would literally mean “not a seed” or “infertile.” Perhaps here this is another word for a cause. Not being certain about the exact intent here, I’ve translated the C. literally. [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
 
