--- a/01_agama/samyukta/01/SA1_167.md
+++ b/01_agama/samyukta/01/SA1_167.md
@@ -36,8 +36,8 @@ next: SA1_168.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 55 in the <cite>Taisho</cite> edition and no. 167 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0013b13" target="_blank">T99.2.13b13-23</a>). This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.48" target="_blank">SN 22.48</a>. This version is a bit expanded compared to SN 22.48 in the definition of the acquired aggregates. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>higher mental defilements</em>. C. 上煩惱心. Given that these defilements are manifold (種種), I suspect this may have been a translation of S. <em>upakleśa</em> (P. <em>upakilesa</em>), which were usually considered secondary or derivative defilements that combined elements of more basic defilements. Late Abhidharma traditions maintained lists of such defilements, and a couple of these lists are preserved in <em>sūtra</em>s. I’m not entirely certain if that was the original term, however, so I have left the C. translated literally. [<a href="#ref2">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 55 in the <cite>Taisho</cite> edition and no. 167 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0013b13" target="_blank">T99.2.13b13-23</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0169a08" target="_blank">Y30.169a8-14</a>). This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.48" target="_blank">SN 22.48</a>. This version is a bit expanded compared to SN 22.48 in the definition of the acquired aggregates. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>higher mental defilements</em>. C. <span class="ch">上煩惱心</span>. Given that these defilements are manifold (<span class="ch">種種</span>), I suspect this may have been a translation of S. <em>upakleśa</em> (P. <em>upakilesa</em>), which were usually considered secondary or derivative defilements that combined elements of more basic defilements. Late Abhidharma traditions maintained lists of such defilements, and a couple of these lists are preserved in <em>sūtra</em>s. I’m not entirely certain if that was the original term, however, so I have left the C. translated literally. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
