--- a/01_agama/samyukta/01/SA1_168.md
+++ b/01_agama/samyukta/01/SA1_168.md
@@ -54,8 +54,8 @@ next: SA1_169.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 56 in the <cite>Taisho</cite> edition and no. 168 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0013b24" target="_blank">T99.2.13b24-c6</a>). There does not appear to be a parallel for this <em>sūtra</em>, which offers an alternative definition of the acquired aggregates in the previous <em>sūtra</em>. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>love or hate</em>. C. 貪、恚. I’ve amended 貪 to 愛 in my translation, as I think it must be an error, given that the previous three passages read 愛、恚. [<a href="#ref2">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 56 in the <cite>Taisho</cite> edition and no. 168 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0013b24" target="_blank">T99.2.13b24-c6</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0169a15" target="_blank">Y30.169a15-70a5</a>). There does not appear to be a parallel for this <em>sūtra</em>, which offers an alternative definition of the acquired aggregates in the previous <em>sūtra</em>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>love or hate</em>. C. <span class="ch">貪、恚</span>. I’ve amended <span class="ch">貪</span> to <span class="ch">愛</span> in my translation, as I think it must be an error, given that the previous three passages read <span class="ch">愛、恚</span>. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
