--- a/01_agama/samyukta/01/SA1_169.md
+++ b/01_agama/samyukta/01/SA1_169.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 169 (57). self-conceit'
+title: 'The Related Discourses | 1. The Aggregates | 169 (57). Self-Conceit'
 type: kramdown
 base: ../../../
 previous: SA1_168.html
@@ -100,11 +100,11 @@ next: SA1_170.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 57 in the <cite>Taisho</cite> edition and no. 169 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0013c07" target="_blank">T99.2.13c7-14b11</a>). It’s parallel with <a href="https://suttacentral.net/sn22.81" target="_blank">SN 22.81</a>.</p>
+<li id="n1"><p>This is <em>sūtra</em> no. 57 in the <cite>Taisho</cite> edition and no. 169 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0013c07" target="_blank">T99.2.13c7-14b11</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0170a13" target="_blank">Y30.170a13-2a13</a>). It’s parallel with <a href="https://suttacentral.net/sn22.81" target="_blank">SN 22.81</a>.</p>
 <p>Overall, this version of the <em>sūtra</em> is simpler and less verbose than SN 22.81. It mentions the views of termination and existence without defining them, which would correspond to annihilationism and eternalism. SN 22.81 ends with doubt and uncertainty instead of self-conceit. It also lacks the conclusion found here.</p>
-<p>Finally, SN 22.81 connects its backstory to the incident at Kosambī when the Buddha abandoned the monks because they were squabbling with each other. The present version doesn’t do this and locates the <em>sūtra</em> at Śrāvastī instead of Kosambī. One detail that the two backstories share, however, is that the Buddha arrives at a “good sal tree” (C. 跋陀薩羅樹, P. <em>bhaddasālamūla</em>). There may have been an original story with this feature that has changed quite a bit. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>contact, feeling, craving, and action</em>. C. 觸⋯受⋯行⋯愛. Yinshun points out that this order is incorrect: action should be last to reproduce the reverse order of the previous passage. I’ve followed his suggest to amend the passage to 觸⋯受⋯愛⋯行. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>makes views of termination and erodes views of existence</em>. C. 作斷見、壞有見. In SN 22.81, two specific views are mentioned that may well be expanded definitions of these two views here. “The self and the cosmos are one and the same. After death I will be that, permanent, everlasting, eternal, and imperishable” (<em>so attā so loko, so pecca bhavissāmi nicco dhuvo sassato avipariṇāmadhammo</em>) would be equivalent to “views of existence” here. “I might not be, and it might not be mine. I will not be, and it will not be mine” (<em>no cassaṁ no ca me siyā nābhavissaṁ na me bhavissatī</em>) would be equivalent to “views of termination” here. Traditionally, these two views refer to the view that a person is not reborn after death (“annihilationism”) and the view that a person has an eternal existence after this life (“eternalism”). [<a href="#ref3">back</a>]</p></li>
+<p>Finally, SN 22.81 connects its backstory to the incident at Kosambī when the Buddha abandoned the monks because they were squabbling with each other. The present version doesn’t do this and locates the <em>sūtra</em> at Śrāvastī instead of Kosambī. One detail that the two backstories share, however, is that the Buddha arrives at a “good sal tree” (C. <span class="ch">跋陀薩羅樹</span>, P. <em>bhaddasālamūla</em>). There may have been an original story with this feature that has changed quite a bit. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>contact, feeling, craving, and action</em>. C. <span class="ch">觸⋯受⋯行⋯愛</span>. Yinshun points out that this order is incorrect: action should be last to reproduce the reverse order of the previous passage. I’ve followed his suggest to amend the passage to <span class="ch">觸⋯受⋯愛⋯行</span>. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>makes views of termination and erodes views of existence</em>. C. <span class="ch">作斷見、壞有見</span>. In SN 22.81, two specific views are mentioned that may well be expanded definitions of these two views here. “The self and the cosmos are one and the same. After death I will be that, permanent, everlasting, eternal, and imperishable” (<em>so attā so loko, so pecca bhavissāmi nicco dhuvo sassato avipariṇāmadhammo</em>) would be equivalent to “views of existence” here. “I might not be, and it might not be mine. I will not be, and it will not be mine” (<em>no cassaṁ no ca me siyā nābhavissaṁ na me bhavissatī</em>) would be equivalent to “views of termination” here. Traditionally, these two views refer to the view that a person is not reborn after death (“annihilationism”) and the view that a person has an eternal existence after this life (“eternalism”). [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
 
