--- a/01_agama/samyukta/01/SA1_170.md
+++ b/01_agama/samyukta/01/SA1_170.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 170 (58). Ten Questions'
+title: 'The Related Discourses | 1. The Aggregates | 1.170 (58). Ten Questions'
 type: kramdown
 base: ../../../
 previous: SA1_169.html
@@ -12,7 +12,7 @@ next: SA1_172.html
 
 <table class="trans">
   <th class='ch'>（五八）十問</th>
-  <th class='en'>170 (58). Ten Questions</th>
+  <th class='en'>1.170 (58). Ten Questions</th>
   <tr>
     <td class='ch' title='t99.2.14b12'>如是我聞： 一時，佛住舍衛國、東園、鹿母講堂。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Mṛgāra’s Mother’s Meeting Hall in the East Park of Śrāvastī.</td>
@@ -166,7 +166,7 @@ next: SA1_172.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 58 in the <cite>Taisho</cite> edition and no. 170 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0014b12" target="_blank">T99.2.14b12-15b3</a>). It’s parallel with <a href="https://suttacentral.net/sn22.82" target="_blank">SN 22.82</a>.</p>
+<li id="n1"><p>This is <em>sūtra</em> no. 58 in the <cite>Taisho</cite> edition and no. 170 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0014b12" target="_blank">T99.2.14b12-15b3</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0175a02" target="_blank">Y30.175a2-7a10</a>). It’s parallel with <a href="https://suttacentral.net/sn22.82" target="_blank">SN 22.82</a>.</p>
 <p>The narrative introducing this discourse is different than the introduction to SN 22.82. There, the setting was an assembly of the monks during the night of the full moon sabbath. Here, there is no special occasion other than the Buddha emerging from meditation. He then goes to the monks, and briefly states that there are five acquired aggregates. Both introductions serve to explain why a monk approached the Buddha to ask a series of ten questions. Some of these questions analyze how these acquired aggregates are different than the five aggregates, which suggests that the concept was introduced after the aggregates were well established.</p>
 <p>Comparing the series of ten questions and answers here to those in SN 22.82, the answers are nearly identical, but several questions are put in different terms. For instance, there is a question in SN 22.82 about personality view (P. <em>sakkāyadiṭṭhi</em>) that is paralleled here with a question about self-conceit (C. <span class="ch">我慢</span>, S. <em>asmimāna</em>). In another case, a question here about what one must know and see to end the contaminants is paralleled in SN 22.82 by a question about ending I-making, mine-making, etc. These alternate forms of the questions have little impact on their answers and should probably be considered equivalent to each other. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>what is the root … come together  … arise  … instigated?</em> C. <span class="ch">以何為根？以何集？以何生？以何觸？</span> In SN 22.82, there is only one question about the root of the acquired aggregates. This series of four questions is very similar to the series of questions asked about the pains suffered by sentient beings in SĀ 3.9. I have translated them similarly as I did there. See the <a href="../03/SA3_9.html#n3" target="_blank">notes to that <em>sūtra</em> for a discussion of these terms</a>. [<a href="#ref2">back</a>]</p></li>
