--- a/01_agama/samyukta/01/SA1_172.md
+++ b/01_agama/samyukta/01/SA1_172.md
@@ -14,215 +14,215 @@ next: SA1_178.html
   <th class='ch'>(一〇四) 焔摩迦</th>
   <th class='en'>1.172 (104). Yamaka</th>
   <tr>
-    <td class="ch" title='t99.2.30c12'>如是我聞： 一時，佛住舍衞國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.30c12'>如是我聞： 一時，佛住舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
 <tr>
-  <td class="ch" title='t99.2.30c13'></td>
+  <td class='ch' title='t99.2.30c13'></td>
   <td class='subheading'>Yamaka’s Wrong View</td>
 </tr>
   <tr>
-    <td class="ch" title='t99.2.30c13'>爾時，有比丘名焰摩迦，起惡邪見。 作如是言： 「如我解佛所說法，漏盡阿羅漢身壞、命終更無所有。」</td>
+    <td class='ch' title='t99.2.30c13'>爾時，有比丘名焰摩迦，起惡邪見。 作如是言： 「如我解佛所說法，漏盡阿羅漢身壞、命終更無所有。」</td>
     <td id='p2'>2. It was then that a monk named Yamaka<sup id="ref2"><a href="#n2">2</a></sup> had an evil view occur to him. He said, “As I understand the Dharma taught by the Buddha, an <em>arhat</em> who has ended the contaminants will no longer exist when their body breaks up and their life ends.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.39c15'>時，有眾多比丘聞彼所說。 往詣其所，語焰摩迦比丘言： 「汝實作是說：『如我解佛所說法，漏盡阿羅漢身壞、命終更無所有』耶？」</td>
+    <td class='ch' title='t99.2.39c15'>時，有眾多比丘聞彼所說。 往詣其所，語焰摩迦比丘言： 「汝實作是說：『如我解佛所說法，漏盡阿羅漢身壞、命終更無所有』耶？」</td>
     <td id='p3'>3. There was a group of monks who overheard what he said. They went to that monk Yamaka and said to him, “Did you really say ‘As I understand the Dharma taught by the Buddha, an <em>arhat</em> who has ended the contaminants will no longer exist when their body breaks up and their life ends’?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.30c18'>答言： 「實爾，諸尊。」</td>
+    <td class='ch' title='t99.2.30c18'>答言： 「實爾，諸尊。」</td>
     <td>He replied, “That’s true, Venerables.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.30c18'>時，諸比丘語焰摩迦： 「勿謗世尊。 謗世尊者不善。 世尊不作是說。 汝當盡捨此惡邪見。」</td>
+    <td class='ch' title='t99.2.30c18'>時，諸比丘語焰摩迦： 「勿謗世尊。 謗世尊者不善。 世尊不作是說。 汝當盡捨此惡邪見。」</td>
     <td id='p4'>4. The monks then said to Yamaka, “Don’t slander the Bhagavān. Slandering the Bhagavān isn’t good. The Bhagavān doesn’t say that. You should abandon this evil view.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.30c21'>諸比丘說此語時，焰摩迦比丘猶執惡邪見。 作如是言： 「諸尊，唯此真實，異則虛妄。」 如是三說。</td>
+    <td class='ch' title='t99.2.30c21'>諸比丘說此語時，焰摩迦比丘猶執惡邪見。 作如是言： 「諸尊，唯此真實，異則虛妄。」 如是三說。</td>
     <td id='p5'>5. When the monks said this to him, Yamaka still held on to this evil view. He said, “Venerables, only this is true; anything else is false.” He said this three times.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.30c23'>時，諸比丘不能調伏焰摩迦比丘，即便捨去。 往詣尊者舍利弗所，語尊者舍利弗言： 「尊者，當知彼焰摩迦比丘起如是惡邪見言： 『我解知佛所說法，漏盡阿羅漢身壞命、終更無所有。』 我等聞彼所說已，故往問焰摩迦比丘： 『汝實作如是知、見耶？』</td>
+    <td class='ch' title='t99.2.30c23'>時，諸比丘不能調伏焰摩迦比丘，即便捨去。 往詣尊者舍利弗所，語尊者舍利弗言： 「尊者，當知彼焰摩迦比丘起如是惡邪見言： 『我解知佛所說法，漏盡阿羅漢身壞命、終更無所有。』 我等聞彼所說已，故往問焰摩迦比丘： 『汝實作如是知、見耶？』</td>
     <td id='p6'>6. Being unable to discipline Yamaka, the monks gave up and left. They went to Venerable Śāriputra and said to him, “Venerable, you should know that the monk Yamaka has had this evil view occur to him: ‘As I understand the Dharma taught by the Buddha, an <em>arhat</em> who has ended the contaminants will no longer exist when their body breaks up and their life ends.’ After we heard what Yamaka had said, we went and asked him, ‘Did you really say that you know and see this?’</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.30c29'>彼答我言： 『諸尊，實爾；異則愚說。』</td>
+    <td class='ch' title='t99.2.30c29'>彼答我言： 『諸尊，實爾；異則愚說。』</td>
     <td>“He answered, ‘Venerables, that’s true; anything else is foolish talk.’</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.30c29'>我即語言： 『汝勿謗世尊。 世尊不作此語。 汝當捨此惡邪見。』 再三諫彼，猶不捨惡邪見，是故我今詣尊者所。 唯願尊者，當令焰摩迦比丘息惡邪見，憐愍彼故！」</td>
+    <td class='ch' title='t99.2.30c29'>我即語言： 『汝勿謗世尊。 世尊不作此語。 汝當捨此惡邪見。』 再三諫彼，猶不捨惡邪見，是故我今詣尊者所。 唯願尊者，當令焰摩迦比丘息惡邪見，憐愍彼故！」</td>
     <td id='p7'>7. “We then said, ‘Don’t slander the Bhagavān. The Bhagavān doesn’t say that. You should abandon this evil view.’ We admonished him three times, but still he didn’t abandon this evil view, so we’ve come to you, Venerable. Please, Venerable, you should make Yamaka desist from this evil view out of compassion for him!”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a4'>舍利弗言： 「如是，我當令彼息惡邪見。」</td>
+    <td class='ch' title='t99.2.31a4'>舍利弗言： 「如是，我當令彼息惡邪見。」</td>
     <td>Śāriputra said, “Yes, I will make him to desist from that evil view.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a5'>時，眾多比丘聞舍利弗語，歡喜隨喜，而還本處。</td>
+    <td class='ch' title='t99.2.31a5'>時，眾多比丘聞舍利弗語，歡喜隨喜，而還本處。</td>
     <td>That group of monks rejoiced and were glad when they heard Śāriputra say this, and then they returned to their abodes.</td>
   </tr>
 <tr>
-  <td class="ch" title='t99.2.31a7'></td>
+  <td class='ch' title='t99.2.31a7'></td>
   <td class='subheading'>Śāriputra Makes Yamaka Desist</td>
 </tr>
   <tr>
-    <td class="ch" title='t99.2.31a7'>爾時，尊者舍利弗晨朝著衣，持鉢，入舍衛城乞食。 食已，出城。 還精舍舉衣、鉢已，往詣焰摩迦比丘所。 時，焰摩迦比丘遙見尊者舍利弗來，即為敷座，洗足，安停脚机。 奉迎為執衣、鉢，請令就座。</td>
+    <td class='ch' title='t99.2.31a7'>爾時，尊者舍利弗晨朝著衣，持鉢，入舍衛城乞食。 食已，出城。 還精舍舉衣、鉢已，往詣焰摩迦比丘所。 時，焰摩迦比丘遙見尊者舍利弗來，即為敷座，洗足，安停脚机。 奉迎為執衣、鉢，請令就座。</td>
     <td id='p8'>8. The Venerable Śāriputra then put on his robe and took his bowl into Śrāvastī to solicit alms early in the morning. After he ate, he left the city. Once he had returned to the monastery and put away his robes and bowl, he paid a visit to Yamaka. When Yamaka saw Venerable Śāriputra coming from a distance, he prepared a seat and set out a footstool for washing his feet.<sup id="ref3"><a href="#n3">3</a></sup> He went out to receive Śāriputra, took his robe and bowl, and invited him to take his seat.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a11'>尊者舍利弗就座、洗足已，語焰摩迦比丘： 「汝實作如是語：『我解知世尊所說法，漏盡阿羅漢身壞命終無所有』耶？」</td>
+    <td class='ch' title='t99.2.31a11'>尊者舍利弗就座、洗足已，語焰摩迦比丘： 「汝實作如是語：『我解知世尊所說法，漏盡阿羅漢身壞命終無所有』耶？」</td>
     <td id='p9'>9. After he had taken his seat and washed his feet, Śāriputra said to Yamaka, “Do you really say ‘As I understand the Dharma taught by the Bhagavān, an <em>arhat</em> who has ended the contaminants won’t exist when his body breaks up and his life ends’?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a14'>焰摩迦比丘白舍利弗言： 「實爾，尊者舍利弗。」</td>
+    <td class='ch' title='t99.2.31a14'>焰摩迦比丘白舍利弗言： 「實爾，尊者舍利弗。」</td>
     <td>Yamaka said, “That’s true, Venerable Śāriputra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a15'>舍利弗言： 「我今問汝，隨意答我。 云何，焰摩迦，色為常耶？為非常耶？」</td>
+    <td class='ch' title='t99.2.31a15'>舍利弗言： 「我今問汝，隨意答我。 云何，焰摩迦，色為常耶？為非常耶？」</td>
     <td id='p10'>10. Śāriputra said, “Now, I’ll ask you a question, and you tell me what you think. How is it, Yamaka? Is form permanent, or is it impermanent?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a17'>答言： 「尊者舍利弗，無常。」</td>
+    <td class='ch' title='t99.2.31a17'>答言： 「尊者舍利弗，無常。」</td>
     <td>He replied, “Venerable Śāriputra, it’s impermanent.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a17'>復問： 「若無常者，是苦不？」</td>
+    <td class='ch' title='t99.2.31a17'>復問： 「若無常者，是苦不？」</td>
     <td id='p11'>11. Again, he asked, “If something is impermanent, it’s painful, isn’t it?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a18'>答言： 「是苦。」</td>
+    <td class='ch' title='t99.2.31a18'>答言： 「是苦。」</td>
     <td>He replied, “It’s painful.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a18'>復問： 「若無常、苦，是變易法。 多聞聖弟子寧於中見我、異我、相在不？」</td>
+    <td class='ch' title='t99.2.31a18'>復問： 「若無常、苦，是變易法。 多聞聖弟子寧於中見我、異我、相在不？」</td>
     <td id='p12'>12. Again, he asked, “If it’s impermanent and painful, it’s liable to change. Would a well-versed disciple see form as self, other than self, or either of them present in the other?”<sup id="ref4"><a href="#n4">4</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a20'>答言： 「不也，尊者舍利弗。」</td>
+    <td class='ch' title='t99.2.31a20'>答言： 「不也，尊者舍利弗。」</td>
     <td>He replied, “No, Venerable Śāriputra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a20'>「受、想、行、識亦復如是。」</td>
+    <td class='ch' title='t99.2.31a20'>「受、想、行、識亦復如是。」</td>
     <td>“<em>Feeling, conception, volition, and awareness are likewise.</em>”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a21'>復問： 「云何，焰摩迦？ 色是如來耶？」</td>
+    <td class='ch' title='t99.2.31a21'>復問： 「云何，焰摩迦？ 色是如來耶？」</td>
     <td id='p13'>13. Again, Śāriputra asked, “How is it, Yamaka? Is form the Tathāgata?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a22'>答言： 「不也，尊者舍利弗。」</td>
+    <td class='ch' title='t99.2.31a22'>答言： 「不也，尊者舍利弗。」</td>
     <td>He replied, “No, Venerable Śāriputra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a22'>「受⋯想⋯行⋯識是如來耶？」</td>
+    <td class='ch' title='t99.2.31a22'>「受⋯想⋯行⋯識是如來耶？」</td>
     <td id='p14'>14. “Is feeling … conception … volition … awareness the Tathāgata?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a23'>答言： 「不也，尊者舍利弗。」</td>
+    <td class='ch' title='t99.2.31a23'>答言： 「不也，尊者舍利弗。」</td>
     <td>He replied, “No, Venerable Śāriputra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a23'>復問： 「云何，焰摩迦？ 異色有如來耶？ 異受⋯想⋯行⋯識有如來耶？」</td>
+    <td class='ch' title='t99.2.31a23'>復問： 「云何，焰摩迦？ 異色有如來耶？ 異受⋯想⋯行⋯識有如來耶？」</td>
     <td id='p15'>15. Again, Śāriputra asked, “How is it, Yamaka? Is there a Tathāgata who is something other than form? Is there a Tathāgata who is something other than feeling … conception … volition … awareness?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a25'>答言： 「不也，尊者舍利弗。」</td>
+    <td class='ch' title='t99.2.31a25'>答言： 「不也，尊者舍利弗。」</td>
     <td>He replied, “No, Venerable Śāriputra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a25'>復問： 「色中有如來耶？ 受⋯想⋯行⋯識中有如來耶？」</td>
+    <td class='ch' title='t99.2.31a25'>復問： 「色中有如來耶？ 受⋯想⋯行⋯識中有如來耶？」</td>
     <td id='p16'>16. Again, he asked, “Is there a Tathāgata in form? Is there a Tathāgata in feeling … conception … volition … awareness?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a26'>答言： 「不也，尊者舍利弗。」</td>
+    <td class='ch' title='t99.2.31a26'>答言： 「不也，尊者舍利弗。」</td>
     <td>He replied, “No, Venerable Śāriputra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a27'>復問： 「如來中有色耶？ 如來中有受⋯想⋯行⋯識耶？」</td>
+    <td class='ch' title='t99.2.31a27'>復問： 「如來中有色耶？ 如來中有受⋯想⋯行⋯識耶？」</td>
     <td id='p17'>17. Again, he asked, “Is there form in the Tathāgata? Is there feeling … conception … volition … awareness in the Tathāgata?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a28'>答言： 「不也，尊者舍利弗。」</td>
+    <td class='ch' title='t99.2.31a28'>答言： 「不也，尊者舍利弗。」</td>
     <td>He replied, “No, Venerable Śāriputra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a29'>復問： 「非色⋯受⋯想⋯行⋯識有如來耶？」</td>
+    <td class='ch' title='t99.2.31a29'>復問： 「非色⋯受⋯想⋯行⋯識有如來耶？」</td>
     <td id='p18'>18. Again, he asked, “Is there a Tathāgata who isn’t form … feeling … conception … volition … awareness?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31a29'>答言： 「不也，尊者舍利弗。」</td>
+    <td class='ch' title='t99.2.31a29'>答言： 「不也，尊者舍利弗。」</td>
     <td>He replied, “No, Venerable Śāriputra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b1'>「如是，焰摩迦。 如來見法真實、如住，無所得、無所施設。 汝云何言： 『我解知世尊所說，漏盡阿羅漢身壞命終無所有』？ 為時說耶？」</td>
+    <td class='ch' title='t99.2.31b1'>「如是，焰摩迦。 如來見法真實、如住，無所得、無所施設。 汝云何言： 『我解知世尊所說，漏盡阿羅漢身壞命終無所有』？ 為時說耶？」</td>
     <td id='p19'>19. “So it is, Yamaka. The Tathāgata in the present life truly abides thus as nothing found and nothing postulated.<sup id="ref5"><a href="#n5">5</a></sup> How can you say, ‘As I understand the Bhagavān’s teaching, an <em>arhat</em> who has ended the contaminants won’t exist when his body breaks up and his life ends’? Is that an appropriate statement?”<sup id="ref6"><a href="#n6">6</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b4'>答言： 「不也，尊者舍利弗。」</td>
+    <td class='ch' title='t99.2.31b4'>答言： 「不也，尊者舍利弗。」</td>
     <td>He replied, “No, Venerable Śāriputra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b5'>復問： 「焰摩迦，先言： 『我解知世尊所說，漏盡阿羅漢身壞命終無所有。』 云何今復言非耶？」</td>
+    <td class='ch' title='t99.2.31b5'>復問： 「焰摩迦，先言： 『我解知世尊所說，漏盡阿羅漢身壞命終無所有。』 云何今復言非耶？」</td>
     <td id='p20'>20. Again, he asked, “Yamaka, you had said before, ‘As I understand the Bhagavān’s teaching, an <em>arhat</em> who has ended the contaminants won’t exist when his body breaks up and his life ends.’ Would you say that now?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b7'>焰摩迦比丘言： 「尊者舍利弗，我先不解、無明故，作如是惡邪見說。 聞尊者舍利弗說已，不解、無明，一切悉斷。」</td>
+    <td class='ch' title='t99.2.31b7'>焰摩迦比丘言： 「尊者舍利弗，我先不解、無明故，作如是惡邪見說。 聞尊者舍利弗說已，不解、無明，一切悉斷。」</td>
     <td id='p21'>21. Yamaka said, “Venerable Śāriputra, I didn’t understand and was ignorant before, so I stated this evil view. After listening to what the Venerable Śāriputra has said, my misunderstanding and ignorance has been completely dispelled.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b9'>復問： 「焰摩迦，若復問： 『比丘，如先惡邪見所說，今何所知見一切悉得遠離？』 汝當云何答？」</td>
+    <td class='ch' title='t99.2.31b9'>復問： 「焰摩迦，若復問： 『比丘，如先惡邪見所說，今何所知見一切悉得遠離？』 汝當云何答？」</td>
     <td id='p22'>22. Again, Śāriputra asked him, “Yamaka, if again you were asked, ‘Monk, about that evil view that you stated before: What do you know and see now that you’ve entirely abandoned it?’ How would you answer?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b11'>焰摩迦答言： 「尊者舍利弗。 若有來問者，我當如是答： 『漏盡阿羅漢色無常。 無常者是苦，苦者寂靜、清涼、永沒。 受、想、行、識亦復如是。』 有來問者，作如是答。」</td>
+    <td class='ch' title='t99.2.31b11'>焰摩迦答言： 「尊者舍利弗。 若有來問者，我當如是答： 『漏盡阿羅漢色無常。 無常者是苦，苦者寂靜、清涼、永沒。 受、想、行、識亦復如是。』 有來問者，作如是答。」</td>
     <td id='p23'>23. Yamaka answered, “Venerable Śāriputra, if someone came and asked me that, I would answer in this way: ‘The form of an <em>arhat</em> who has ended the contaminants is impermanent. Something that’s impermanent is painful, and what’s painful has become tranquil, has cooled, and has disappeared forever. <em>Feeling, conception, volition, and awareness are likewise.</em>’ Were someone to come and ask me that, I would answer them in this way.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b15'>舍利弗言： 「善哉！善哉，焰摩迦比丘！汝應如是答。 所以者何？ 漏盡阿羅漢色無常。 無常者是苦。 若無常、苦者，是生滅法。 受、想、行、識亦復如是。」</td>
+    <td class='ch' title='t99.2.31b15'>舍利弗言： 「善哉！善哉，焰摩迦比丘！汝應如是答。 所以者何？ 漏盡阿羅漢色無常。 無常者是苦。 若無常、苦者，是生滅法。 受、想、行、識亦復如是。」</td>
     <td id='p24'>24. Śāriputra said, “Good, Yamaka! Good! You should answer them is that way. Why is that? The form of an <em>arhat</em> who has ended the contaminants is impermanent. Something that’s impermanent and painful is something that arises and ceases. <em>Feeling, conception, volition, and awareness are likewise.</em>”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b18'>尊者舍利弗說是法時，焰摩迦比丘遠塵離垢，得法眼淨。</td>
+    <td class='ch' title='t99.2.31b18'>尊者舍利弗說是法時，焰摩迦比丘遠塵離垢，得法眼淨。</td>
     <td id='p25'>25. When Venerable Śāriputra taught this Dharma, Yamaka parted with dust and defilement, and his Dharma eye was purified.</td>
   </tr>
 <tr>
-  <td class="ch" title='t99.2.31b20'></td>
+  <td class='ch' title='t99.2.31b20'></td>
   <td class='subheading'>The Simile of the False Friend</td>
 </tr>
   <tr>
-    <td class="ch" title='t99.2.31b20'>尊者舍利弗語焰摩迦比丘： 「今當說譬，夫智者以譬得解。 如長者子，長者子大富、多財。 廣求僕從，善守護財物。</td>
+    <td class='ch' title='t99.2.31b20'>尊者舍利弗語焰摩迦比丘： 「今當說譬，夫智者以譬得解。 如長者子，長者子大富、多財。 廣求僕從，善守護財物。</td>
     <td id='p26'>26. Venerable Śāriputra said to Yamaka, “Now, I will give you an analogy, for wise people can understand things using analogies. Take the example of a prominent man’s son. This prominent man’s son was quite wealthy and had much property. He searched widely for servants to keep his property well-guarded.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b22'>「時，有怨家惡人，詐來親附，為作僕從。 常伺其便晚眠，早起，侍息左右。 謹敬其事，遜其言辭，令主意悅，作親友想、子想。 極信不疑，不自防護。 然後手執利刀，以斷其命。</td>
+    <td class='ch' title='t99.2.31b22'>「時，有怨家惡人，詐來親附，為作僕從。 常伺其便晚眠，早起，侍息左右。 謹敬其事，遜其言辭，令主意悅，作親友想、子想。 極信不疑，不自防護。 然後手執利刀，以斷其命。</td>
     <td id='p27'>27. “Then, an evil man from a rival clan becomes his servant as a pretense to befriend him. This man always watches for an opportunity while he sleeps at night, when he gets up in the morning, or when his servants are away. This evil man takes great care in his work and is modest when speaking so that his employer would be pleased and think of him as a friend or a son. Trusting him completely and not being suspicious, his employer doesn’t guard himself. After that, that evil man takes a sharp knife and ends his life with it.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b26'>「焰摩迦比丘，於意云何？ 彼惡怨家，為長者親友？ 非為初始，方便害心，常伺其便至其終耶？ 而彼長者不能覺知，至今受害。」</td>
+    <td class='ch' title='t99.2.31b26'>「焰摩迦比丘，於意云何？ 彼惡怨家，為長者親友？ 非為初始，方便害心，常伺其便至其終耶？ 而彼長者不能覺知，至今受害。」</td>
     <td id='p28'>28. “Yamaka, what do you think? Was this evil man from a rival clan a friend of that prominent man? Did he not have an intent to harm him from the start, always watching for an opportunity until his death? But that prominent man didn’t realize it until he was attacked.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31b29'>答言： 「實爾，尊者。」</td>
+    <td class='ch' title='t99.2.31b29'>答言： 「實爾，尊者。」</td>
     <td>Yamaka replied, “That’s true, Venerable.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31c1'>舍利弗語焰摩迦比丘： 「於意云何？ 彼長者本知彼人詐親欲害，善自防護，不受害耶？」</td>
+    <td class='ch' title='t99.2.31c1'>舍利弗語焰摩迦比丘： 「於意云何？ 彼長者本知彼人詐親欲害，善自防護，不受害耶？」</td>
     <td id='p29'>29. Śāriputra said to Yamaka, “What do you think? Had the prominent man known at the start that that man befriended him as a pretense to attack him, wouldn’t he have guarded himself well and avoided being attacked?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31c3'>答言： 「如是，尊者舍利弗。」</td>
+    <td class='ch' title='t99.2.31c3'>答言： 「如是，尊者舍利弗。」</td>
     <td>He replied, “Yes, Venerable Śāriputra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31c3'>「如是，焰摩迦比丘。 愚癡無聞凡夫於五受陰作常想、安隱想、不病想、我想、我所想。 於此五受陰保持、護惜，終為此五受陰怨家所害。 如彼長者，為詐親怨家所害而不覺知。</td>
+    <td class='ch' title='t99.2.31c3'>「如是，焰摩迦比丘。 愚癡、無聞凡夫於五受陰作常想、安隱想、不病想、我想、我所想。 於此五受陰保持、護惜，終為此五受陰怨家所害。 如彼長者，為詐親怨家所害而不覺知。</td>
     <td id='p30'>30. “So it is, Yamaka. Foolish and uneducated ordinary people think of the five acquired aggregates as permanence, safety, good health, self, and what belongs to self. They preserve and cherish these five acquired aggregates, but in the end the five acquired aggregates are a rival clan that attacks them. As with that prominent man, the aggregates befriend them as a pretense to attack them, but ordinary people don’t realize it.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31c7'>「焰摩迦，多聞聖弟子於此五受陰，觀察如病、如癰、如刺、如殺。 無常、苦、空、非我、非我所。 於此五受陰不著、不受。 不受故不著。 不著故自覺涅槃： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
-    <td id='p31'>31. “Yamaka, well-versed noble disciples observe that these five acquired aggregates are like illnesses, abscesses, thorns, and killers. They’re impermanent, painful, empty, not self, and don’t belong to self. Noble disciples don’t cling to or acquire these five acquired aggregates. Because they don’t acquire them, they aren’t attached to them. Because they aren’t attached to them, they themselves realize <em>nirvāṇa</em>: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+    <td class='ch' title='t99.2.31c7'>「焰摩迦，多聞聖弟子於此五受陰，觀察如病、如癰、如刺、如殺。 無常、苦、空、非我、非我所。 於此五受陰不著、不受。 不受故不著。 不著故自覺涅槃： 『我生已盡，梵行已立，所作已作。』 自知不受後有。」</td>
+    <td id='p31'>31. “Yamaka, well-versed noble disciples observe that these five acquired aggregates are like illnesses, abscesses, thorns, and killers. They’re impermanent, painful, empty, not self, and don’t belong to self. Noble disciples don’t cling to or acquire these five acquired aggregates. Because they don’t acquire them, they aren’t attached to them. Because they aren’t attached to them, they themselves realize <em>nirvāṇa</em>: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ They themselves know they won’t be subject to a later existence.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.31c11'>尊者舍利弗說是法時，焰摩迦比丘不起諸漏，心得解脫。 尊者舍利弗為焰摩迦比丘說法，示、教、照、喜已，從座起去。</td>
+    <td class='ch' title='t99.2.31c11'>尊者舍利弗說是法時，焰摩迦比丘不起諸漏，心得解脫。 尊者舍利弗為焰摩迦比丘說法，示、教、照、喜已，從座起去。</td>
     <td id='p32'>32. When Venerable Śāriputra explained the Dharma, Yamaka didn’t produce the contaminants, and his mind was liberated. After Venerable Śāriputra had explained the Dharma and shown, taught, illuminated, and gladdened him, Yamaka got up from his seat and left.</td>
   </tr>
 </table>
@@ -232,17 +232,17 @@ next: SA1_178.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 104 in the <cite>Taisho</cite> edition and no. 172 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0030c12" target="_blank">T99.2.30c12-31c14</a>).<br/>
-This text is very similar to <a href="https://suttacentral.net/sn22.85" target="_blank">SN 22.85</a>. They both deal with the wrong view that an <em>arhat</em> ceases to exist after their <em>parinirvāṇa</em>. In both, Śāriputra’s solution to the problem is to deny any ontological status to the post-mortem <em>arhat</em> by instead taking up the relationship of the Tathāgata with the five aggregates. In the course of making this argument, Śāriputra appears to exclude any possibility of a permanent self having any kind of relationship with the aggregates.<br/>
-After convincing Yamaka of his error, Śāriputra tells him the story of a prominent man who is assassinated by a deceitful enemy who pretends to be his loyal servant. This parable is then used to describe the relationship ordinary people have with the five aggregates, which appear to be their friends yet eventually turn out to be their killers.<br/>
-All of this is somewhat confounding, and apparently it was intended to be for someone searching for a black and white position on the nature of complete liberation. One cannot help but have a little sympathy for the Pudgalavādins who cited <em>sūtra</em>s like this one to argue that a person who is neither the same nor different than the aggregates enters <em>nirvāṇa</em> after their death. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>Yamaka</em>. C. 焔摩迦 (EMC. yiɛm-mua-kă = <em>yamaka</em>), G. <em>yamaga</em>, P/S. <em>yamaka</em>. This name literally means “pair.” The C. translit. matches S. better than G., which often dropped the final syllable of names. [<a href="#ref2">back</a>]</li>
-<li id="n3"><em>set out a footstool for washing his feet</em>. C. 洗足安停脚机. This expression only occurs in this and the previous <em>sūtra</em> in SĀ. It must refer to the practice of setting out water and a stool for a guest to washing their feet. There are similar expressions in Pali sources such as <em>pādodaka pādapīṭha pādakaṭhalika upanikkhipi</em> (“to set out foot water, a footstool, and foot towel(?)”). The third item is somewhat obscure in Pali and has different competing interpretations such as a towel, a wash bowl, a second stool, or a scraper. There is no third item here, and there is no reference to foot washing in SĀ 1.171, either. Taking all of this together, I’ve chosen to read 洗足 as a modifier that expresses the purpose of the footstool even though it’s actually in an adverbial position in the text as we have it. [<a href="#ref3">back</a>]</li>
-<li id="n4"><em>see form as self, other than self, or either of them present in the other</em>. C. 於中見我、異我、相在. I take the last item in this list as lit. meaning “present in each other.” The result is that there are actually four options being listed here: seeing self as identical to form, self as different than form, self as in form, or form as in self.<br/>
-In SN 22.85, Sāriputta immediately brings the analysis of the Tathāgata to bear, asking if he could be regarded as in form, distinct from form, as possessing form, or being without form. Later, when a noble disciple’s view of the aggregates is discussed, SN 22.85 offers four alternatives that are a little different: “They don’t regard form as self, self as having form, form in self, or self in form” (<em>na rūpaṁ attato samanupassati, na rūpavantaṁ attānaṁ; na attani rūpaṁ, na rūpasmiṁ attānaṁ</em>). These last two items agree with the way I interpret the expression 相在 as “present in each other.” [<a href="#ref4">back</a>]</li>
-<li id="n5"><em>The Tathāgata in the present life truly abides thus as nothing found and nothing postulated.</em>. C. 如來見法真實、如住，無所得、無所施設, P. <em>diṭṭheva dhamme saccato thetato tathāgate anupalabbhiyamāne</em>. The C. is nearly identical to the P. parallel here, but there are a couple minor differences. First, Tathāgata (如來) has been moved to the normal subject position for C. Second, where SN 22.85 reads <em>thetato</em>, the C. probably translates a word equiv. to S. <em>tathāsthita</em> (G. <em>tasaṭ́hida</em>). These words in P., G., and S. are similar in pronunciation. The variation here results in the P. passage offering a synonym for <em>saccato</em>, while the Āgama says that the Tathāgata stands “thus,” i.e., in a ineffable state. The third difference is that here 無所施設 (G. <em>apraṃñati</em> > P. <em>apaññatti</em> > S. <em>aprajñapti</em>?) is offered as a synonym for 無所得 (S. <em>anupalambha</em> “nothing perceived” or more literally <em>aprāpti</em> “nothing apprehended”).<br/>
-It’s difficult to overstate the importance of this passage and others like it in steering the philosophical development of Buddhism away from the binary states of “existent” and “non-existent” and towards a philosophy of the ineffability of all things. In this particular passage and context, however, the subject is only the Tathāgata (and, by extension, <em>arhat</em>s who had passed away). One is left to wonder whether this was, in fact, a description of the Tathāgata after his passing away from the world, given that the natural tendency would have been to deify him as was the custom in ancient times. The conclusion was that he did not exist in a state that could be comprehended by the experiences of this world (as delineated by the five aggregates), but neither was he apart from them. His status was simply undefinable. [<a href="#ref5">back</a>]</li>
-<li id="n6"><em>appropriate statement</em>. C. 時說, P. <em>kallaṁ … veyyākaraṇaṁ</em>. The C. lit. means “timely statement.” It’s interesting to note that the Pali parallel uses the expression “kallaṁ … veyyākaraṇaṁ.” P. <em>kalla</em> (S. <em>kalya</em>), which means “appropriate, valid, legitimate,” becomes G. <em>kala</em>. This could’ve easily been mistaken for S. <em>kāla</em>, which would explain its trans. here as 時. [<a href="#ref6">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 104 in the <cite>Taisho</cite> edition and no. 172 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0030c12" target="_blank">T99.2.30c12-31c14</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0184a02" target="_blank">Y30.184a2-7a1</a>).</p>
+<p>This text is very similar to <a href="https://suttacentral.net/sn22.85" target="_blank">SN 22.85</a>. They both deal with the wrong view that an <em>arhat</em> ceases to exist after their <em>parinirvāṇa</em>. In both, Śāriputra’s solution to the problem is to deny any ontological status to the post-mortem <em>arhat</em> by instead taking up the relationship of the Tathāgata with the five aggregates. In the course of making this argument, Śāriputra appears to exclude any possibility of a permanent self having any kind of relationship with the aggregates.</p>
+<p>After convincing Yamaka of his error, Śāriputra tells him the story of a prominent man who is assassinated by a deceitful enemy who pretends to be his loyal servant. This parable is then used to describe the relationship ordinary people have with the five aggregates, which appear to be their friends yet eventually turn out to be their killers.</p>
+<p>All of this is somewhat confounding, and apparently it was intended to be for someone searching for a black and white position on the nature of complete liberation. One cannot help but have a little sympathy for the Pudgalavādins who cited <em>sūtra</em>s like this one to argue that a person who is neither the same nor different than the aggregates enters <em>nirvāṇa</em> after their death. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Yamaka</em>. C. <span class="ch">焔摩迦</span> (EMC. yiɛm-mua-kă = <em>yamaka</em>), G. <em>yamaga</em>, P/S. <em>yamaka</em>. This name literally means “pair.” The C. translit. matches S. better than G., which often dropped the final syllable of names. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>set out a footstool for washing his feet</em>. C. <span class="ch">洗足安停脚机</span>. This expression only occurs in this and the previous <em>sūtra</em> in SĀ. It must refer to the practice of setting out water and a stool for a guest to wash their feet. There are similar expressions in Pali sources such as <em>pādodaka pādapīṭha pādakaṭhalika upanikkhipi</em> (“to set out foot water, a footstool, and foot towel(?)”). The third item is somewhat obscure in Pali and has different competing interpretations such as a towel, a wash bowl, a second stool, or a scraper. There is no third item here, and there is no reference to foot washing in SĀ 1.171, either. Taking all of this together, I’ve chosen to read <span class="ch">洗足</span> as a modifier that expresses the purpose of the footstool even though it appears to be a verb in series with <span class="ch">安停</span> in the text as we have it. Lit., it reads “washed his feet and set out a footstool.” [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>see form as self, other than self, or either of them present in the other</em>. C. <span class="ch">於中見我、異我、相在</span>. I take the last item in this list as lit. meaning “present in each other.” The result is that there are actually four options being listed here: seeing self as identical to form, self as different than form, self as in form, or form as in self.</p>
+<p>In SN 22.85, Sāriputta immediately brings the analysis of the Tathāgata to bear, asking if he could be regarded as in form, distinct from form, as possessing form, or being without form. Later, when a noble disciple’s view of the aggregates is discussed, SN 22.85 offers four alternatives that are a little different: “They don’t regard form as self, self as having form, form in self, or self in form” (<em>na rūpaṁ attato samanupassati, na rūpavantaṁ attānaṁ; na attani rūpaṁ, na rūpasmiṁ attānaṁ</em>). These last two items agree with the way I interpret the expression <span class="ch">相在</span> as “present in each other.” [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p><em>The Tathāgata in the present life truly abides thus as nothing found and nothing postulated</em>. C. <span class="ch">如來見法真實、如住，無所得、無所施設</span>, P. <em>diṭṭheva dhamme saccato thetato tathāgate anupalabbhiyamāne</em>. The C. is nearly identical to the P. parallel here, but there are a couple minor differences. First, Tathāgata (<span class="ch">如來</span>) has been moved to the normal subject position for C. Second, where SN 22.85 reads <em>thetato</em>, the C. probably translates a word equiv. to S. <em>tathāsthita</em> (G. <em>tasaṭ́hida</em>). These words in P., G., and S. are similar in pronunciation. The variation here results in the P. passage offering a synonym for <em>saccato</em>, while the Āgama says that the Tathāgata stands “thus,” i.e., in a ineffable state. The third difference is that here <span class="ch">無所施設</span> (G. <em>apraṃñati</em> > P. <em>apaññatti</em> > S. <em>aprajñapti</em>?) is offered as a synonym for <span class="ch">無所得</span> (S. <em>anupalambha</em> “nothing perceived” or more literally <em>aprāpti</em> “nothing apprehended”).</p>
+<p>It’s difficult to overstate the importance of this passage and others like it in steering the philosophical development of Buddhism away from the binary states of “existent” and “non-existent” and towards a philosophy of the ineffability of all things. In this particular passage and context, however, the subject is only the Tathāgata (and, by extension, <em>arhat</em>s who had passed away). One is left to wonder whether this was, in fact, a description of the Tathāgata after his passing away from the world, given that the natural tendency would have been to deify him as was the custom in ancient times. The conclusion was that he did not exist in a state that could be comprehended by the experiences of this world (as delineated by the five aggregates), but neither was he apart from them. His status was simply undefinable. [<a href="#ref5">back</a>]</p></li>
+<li id="n6"><p><em>appropriate statement</em>. C. <span class="ch">時說</span>, P. <em>kallaṁ … veyyākaraṇaṁ</em>. The C. lit. means “timely statement.” It’s interesting to note that the Pali parallel uses the expression “kallaṁ … veyyākaraṇaṁ.” P. <em>kalla</em> (S. <em>kalya</em>), which means “appropriate, valid, legitimate,” becomes G. <em>kala</em>. This could’ve easily been mistaken for S. <em>kāla</em>, which would explain its trans. here as <span class="ch">時</span>. [<a href="#ref6">back</a>]</p></li>
 </ol>
 <hr/>
 
