--- a/01_agama/samyukta/01/SA1_164.md
+++ b/01_agama/samyukta/01/SA1_164.md
@@ -24,10 +24,11 @@ next: SA1_165.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 52 in the <cite>Taisho</cite> edition and no. 164 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012c02" target="_blank">T99.2.12c2-3</a>).</p>
-<p>cf. SĀ 7.27 (624), SĀ 45.9 (965), <a href="https://suttacentral.net/an10.95" target="_blank">AN 10.95</a>, <a href="https://suttacentral.net/sn45.30" target="_blank">SN 45.30</a>, <a href="https://suttacentral.net/sn47.16" target="_blank">SN 47.16</a>, <cite>Abhidharma Mahāvibhāṣā</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T27n1545_p0943c03" target="_blank">T1545.27.943c3</a>), and <cite>Abhidharma Kośa</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T29n1558_p0156b08" target="_blank">T1558.29.156b8</a>) for <em>sūtra</em>s and passages involving interlocutors of the same name.</p>
-<p>It is unfortunate that this <em>sūtra</em> was not translated because it may well be lost today along with the Sarvāstivāda EĀ. This <em>sūtra</em> must have involved the five aggregates in some way, which is not included in any of the extant texts in which Uktika appears (that I have found thus far). [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 52 in the <cite>Taisho</cite> edition and no. 164 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012c02" target="_blank">T99.2.12c2-3</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0164a12" target="_blank">Y30.164a12-13</a>).</p>
+<p>It is unfortunate that this <em>sūtra</em> was not translated because it may well be lost today along with the Sarvāstivāda EĀ. This <em>sūtra</em> must have involved the five aggregates in some way, which is not included in any of the extant texts that I have found.</p>
+<p>cf. SĀ 7.27 (624), SĀ 45.9 (965), <a href="https://suttacentral.net/an10.95" target="_blank">AN 10.95</a>, <a href="https://suttacentral.net/sn45.30" target="_blank">SN 45.30</a>, <a href="https://suttacentral.net/sn47.16" target="_blank">SN 47.16</a>, <cite>Abhidharma Mahāvibhāṣā</cite> (<a  href="https://cbetaonline.dila.edu.tw/zh/T27n1545_p0943c03" target="_blank">T1545.27.943c3</a>), and <cite>Abhidharma Kośa</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T29n1558_p0156b08" target="_blank">T1558.29.156b8</a>) for <em>sūtra</em>s and passages involving interlocutors of the same name. [<a href="#ref1">back</a>]</p></li>
 </ol>
+
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
