--- a/01_agama/samyukta/01/SA1_41.md
+++ b/01_agama/samyukta/01/SA1_41.md
@@ -14,27 +14,27 @@ next: SA1_42.html
   <th class='ch'>（二五八） 無明</th>
   <th class='en'>41 (258). Ignorance (3)</th>
   <tr>
-    <td class='ch' title='t99.2.65a13'>如是我聞：一時，佛住王舍城迦蘭陀竹園。爾時，尊者舍利弗、尊者摩訶拘絺羅在耆闍崛山。</td>
+    <td class='ch' title='t99.2.65a13'>如是我聞： 一時，佛住王舍城、迦蘭陀竹園。 爾時，尊者舍利弗、尊者摩訶拘絺羅在耆闍崛山。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra and Venerable Mahākauṣṭhila were on Mount Gṛdhrakūṭa.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.65a15'>時，摩訶拘絺羅晡時從禪起，詣舍利弗所，共相問訊，相娛悅已，却坐一面。</td>
+    <td class='ch' title='t99.2.65a15'>時，摩訶拘絺羅晡時從禪起，詣舍利弗所。 共相問訊，相娛悅已，却坐一面。</td>
     <td id='p2'>2. Venerable Mahākauṣṭhila rose from meditation in the afternoon and visited Śāriputra. Once they had exchanged greetings and joked in various ways, he withdrew to sit to one side.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.65a17'>時，摩訶拘絺羅語舍利弗：「欲有所問，仁者寧有閑暇見答以不？」</td>
+    <td class='ch' title='t99.2.65a17'>時，摩訶拘絺羅語舍利弗： 「欲有所問，仁者寧有閑暇見答以不？」</td>
     <td id='p3'>3. Venerable Mahākauṣṭhila said to Śāriputra, “I have a question I’d like to ask if you might have some time to explain it for me?”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.65a18'>舍利弗言：「仁者且問，知者當答。」</td>
+    <td class='ch' title='t99.2.65a18'>舍利弗言： 「仁者且問。知者當答。」</td>
     <td>Śāriputra said, “Go ahead with your question, sir. I will tell you what I know.”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.65a19'>時，摩訶拘絺羅語舍利弗言：「所謂無明，無明者為何謂耶？誰有此無明？」</td>
+    <td class='ch' title='t99.2.65a19'>時，摩訶拘絺羅語舍利弗言： 「所謂無明。 無明者為何謂耶？ 誰有此無明？」</td>
     <td id='p4'>4. Venerable Mahākauṣṭhila asked Śāriputra, “There’s the term ‘ignorance.’ What is this ignorance? Who possesses this ignorance?”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.65a21'>舍利弗言：「不知，是無明。」</td>
+    <td class='ch' title='t99.2.65a21'>舍利弗言： 「不知是無明。」</td>
     <td>Śāriputra replied, “To not know is ignorance. [Someone who doesn’t know is ignorant.]”</td>
   </tr>
   <tr>
@@ -42,16 +42,15 @@ next: SA1_42.html
     <td id='p5'>5. “What don’t they know?”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.65a21'>
-「謂色不如實知，色集、色滅、色味、色患、色離不如實知。受、想、行、識，識集、識滅、識味、識患、識離不如實知。摩訶拘絺羅，於此五受陰不如實知、不如實見、不無間等、若闇、若愚，是名無明，成就此法者，名有無明。」</td>
+    <td class='ch' title='t99.2.65a21'>「謂色不如實知，色集⋯色滅⋯色味⋯色患⋯色離不如實知。 受⋯想⋯行⋯識⋯識集⋯識滅⋯識味⋯識患⋯識離不如實知。 摩訶拘絺羅，於此五受陰不如實知。 不如實見、不無間等。 若闇、若愚⋯ 是名無明。 成就此法者，名有無明。」</td>
     <td id='p6'>6. “They don’t truly know form … the formation of form … the cessation of form … the enjoyment of form … the trouble of form, and they don’t truly know the escape from form. They don’t truly know feeling … conception … volition … awareness … the formation of awareness … the cessation of awareness … the enjoyment of awareness … the trouble of awareness, and they don’t truly know the escape from awareness. Mahākauṣṭhila, they truly don’t know these five acquired aggregates. They don’t truly see and have no direct realization of them. They are benighted, foolish, [and aren’t insightful.] This is called ignorance. Someone who achieves this is called ignorant.”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.65a26'>又問：「明者。云何為明？誰有此明？」</td>
-    <td id='p7'>7. Mahākauṣṭhila also asked, “Śāriputra, what is insight? Who possesses this insight?”</td>
+    <td class='ch' title='t99.2.65a26'>又問： 「⋯明者。 云何為明？ 誰有此明？」</td>
+    <td id='p7'>7. Mahākauṣṭhila also asked, “[Śāriputra, there’s that term] ‘insight.’ What is insight? Who possesses this insight?”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.65a27'>舍利弗言：「知者是明。」</td>
+    <td class='ch' title='t99.2.65a27'>舍利弗言： 「⋯知者是明。」</td>
     <td>Śāriputra said, “[Mahākauṣṭhila, the term insight means to know.] Someone who knows is called insightful.”</td>
   </tr>
   <tr>
@@ -59,7 +58,7 @@ next: SA1_42.html
     <td id='p8'>8. “What is it that they know?”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.65a28'>舍利弗言： 「色如實知， 色集、色滅、色味、色患、色離如實知。 如是受、想、行、識如實知， 識集、識滅、識味、識患、識離如實知。摩訶拘絺羅！於此五受陰如實知、如實見、明、覺、慧、無間等，是名為明，成就此者，名為有明。」</td>
+    <td class='ch' title='t99.2.65a28'>舍利弗言： 「色如實知、色集⋯色滅⋯色味⋯色患⋯色離如實知。 如是受⋯想⋯行⋯識如實知、識集⋯識滅⋯識味⋯識患⋯識離如實知。 摩訶拘絺羅，於此五受陰如實知。 如實見、明。 覺、慧、無間等。 是名為明。 成就此者，名為有明。」</td>
     <td id='p9'>9. Śāriputra said, “They truly know form … the formation of form … the cessation of form … the enjoyment of form … the trouble of form, and they truly know the escape from form. They truly know feeling … conception … volition … awareness … the formation of awareness … the cessation of awareness … the enjoyment of awareness … the trouble of awareness, and they truly know the escape from awareness. Mahākauṣṭhila, they truly know these five acquired aggregates. They truly see and have insight about them. They are aware, wise, and directly realize it. This is called insight. Someone who achieves this is called insightful.”</td>
   </tr>
   <tr>
